# pyphyml

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: package.yml  requirements.txt  test.yml
include/phyml/: ancestral.pxd  cl.pxd  free.pxd  init.pxd  io.pxd  lk.pxd  make.pxd  models.pxd  optimiz.pxd  pars.pxd  random.pxd  spr.pxd  utilities.pxd
patches/: Makefile.am.patch  Makefile.patch  alrt.c.patch  alrt.h.patch  ancestral.c.patch  ancestral.h.patch  cl.c.patch  cl.h.patch  config.h.patch  config.log.patch  config.status.patch  configure.ac.patch  cv.c.patch  cv.h.patch  evolve.c.patch  evolve.h.patch  free.c.patch  init.c.patch  init.h.patch  io.c.patch  io.h.patch  lk.c.patch  lk.h.patch  m4.c.patch  m4.h.patch  main.c.patch  make.c.patch  mcmc.h.patch  mixt.c.patch  mixt.h.patch  optimiz.c.patch  optimiz.h.patch  pars.c.patch  pars.h.patch  random.c.patch  random.h.patch  simu.c.patch  simu.h.patch  spr.c.patch  spr.h.patch  (+8 more)
src/: CMakeLists.txt
src/phyml/: CMakeLists.txt  config.h.in
src/pyphyml/: CMakeLists.txt  __init__.py  _phyml.pyx
src/scripts/: apply_patch.py  generate_patches.py
src/scripts/cmake/: CythonExtension.cmake  FindSSE3.cmake
tests/: test_builder.py
tests/data/: 16S.fna  nucleic  nucleic.alpha0_1.tree  nucleic.default.tree  nucleic.modelF84.tree
